fixed horizontal scroll in sale section

--- a/src/css/sale.css
+++ b/src/css/sale.css
@@ -251,4 +251,8 @@
     max-width: 279px;
     width: auto;
   }
+  .sale-container {
+    max-width: 280px;
+    min-width: 0;
+  }
 }
